--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,96 @@
-cmake_minimum_required(VERSION "3.12")
-project(SolarSimulator)
+
+cmake_minimum_required(VERSION 3.00)
 
 set(CMAKE_CXX_STANDARD 17)
-add_executable("${CMAKE_PROJECT_NAME}" "./SolarSimulator/Source/main.cpp")
+
+
+set(PRODUCTION_BUILD OFF CACHE BOOL "Make this a production build" FORCE)
+
+
+
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Release>:Release>")
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+
+
+#may give problems on linux
+if(PRODUCTION_BUILD)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE) #link time optimization
+else()
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION FALSE)
+endif()
+
+
+
+if(MSVC) 
+add_compile_options(/arch:AVX2) #make sure SIMD optimizations take place
+endif()
+
+project(SolarSimulator)
+
+
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
+
+
+add_subdirectory(./SolarSimulator/3rdParty/glfw)			#window oppener
+#add_subdirectory(thirdparty/glad)				#opengl loader
+#add_subdirectory(thirdparty/stb_image)			#loading immaged
+#add_subdirectory(thirdparty/stb_truetype)		#loading ttf files
+##add_subdirectory(thirdparty/enet-1.3.17)		#networking
+#add_subdirectory(thirdparty/raudio)				#audio
+#add_subdirectory(thirdparty/glm)				#math
+#add_subdirectory(thirdparty/imgui-docking)		#ui
+
+
+
+
+file(GLOB_RECURSE MY_SOURCES CONFIGURE_DEPENDS "./SolarSimulator/Source/*.cpp")
+
+add_executable("${CMAKE_PROJECT_NAME}")
+
+set_property(TARGET "${CMAKE_PROJECT_NAME}" PROPERTY CXX_STANDARD 17)
+
+
+target_compile_definitions("${CMAKE_PROJECT_NAME}" PUBLIC GLFW_INCLUDE_NONE=1) 
+
+if(PRODUCTION_BUILD)
+	# setup the ASSETS_PATH macro to be in the root folder of your exe
+	target_compile_definitions("${CMAKE_PROJECT_NAME}" PUBLIC RESOURCES_PATH="./resources/") 
+
+	# remove the option to debug asserts.
+	target_compile_definitions("${CMAKE_PROJECT_NAME}" PUBLIC PRODUCTION_BUILD=1) 
+	target_compile_definitions("${CMAKE_PROJECT_NAME}" PUBLIC DEVELOPLEMT_BUILD=0) 
+
+else()
+	# This is useful to get an ASSETS_PATH in your IDE during development
+	target_compile_definitions("${CMAKE_PROJECT_NAME}" PUBLIC RESOURCES_PATH="${CMAKE_CURRENT_SOURCE_DIR}/resources/")
+	target_compile_definitions("${CMAKE_PROJECT_NAME}" PUBLIC PRODUCTION_BUILD=0) 
+	target_compile_definitions("${CMAKE_PROJECT_NAME}" PUBLIC DEVELOPLEMT_BUILD=1) 
+
+endif()
+
+target_sources("${CMAKE_PROJECT_NAME}" PRIVATE ${MY_SOURCES} )
+
+
+if(MSVC) # If using the VS compiler...
+
+	target_compile_definitions("${CMAKE_PROJECT_NAME}" PUBLIC _CRT_SECURE_NO_WARNINGS)
+
+	set_target_properties("${CMAKE_PROJECT_NAME}" PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE /ENTRY:mainCRTStartup") #no console
+	
+	#set_property(TARGET "${CMAKE_PROJECT_NAME}" PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDebug<$<CONFIG:Debug>:Debug>")
+	#set_property(TARGET "${CMAKE_PROJECT_NAME}" PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Release>:Release>")
+
+endif()
+
+#force remove unicode
+if (WIN32)
+	target_compile_options("${CMAKE_PROJECT_NAME}" PRIVATE /UUNICODE /U_UNICODE)
+endif()
+
+
+target_include_directories("${CMAKE_PROJECT_NAME}" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/SolarSimulator/include/")
+target_link_libraries("${CMAKE_PROJECT_NAME}" PRIVATE glfw )
