--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
 add_subdirectory(./SolarSimulator/3rdParty/glfw)
 add_subdirectory(./SolarSimulator/3rdParty/glew/build/cmake)
 add_subdirectory(./SolarSimulator/3rdParty/glm)
+add_subdirectory(./SolarSimulator/3rdParty/stb_image)
+
 
 
 
@@ -92,4 +94,4 @@ target_include_directories("${CMAKE_PROJECT_NAME}" PUBLIC "${CMAKE_CURRENT_SOURC
 target_include_directories("${CMAKE_PROJECT_NAME}" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/SolarSimulator/3rdParty/glew/include")
 
 
-target_link_libraries("${CMAKE_PROJECT_NAME}" PRIVATE glfw glew)
+target_link_libraries("${CMAKE_PROJECT_NAME}" PRIVATE glfw glew stb_image)
