Now we support Ui loading from json file!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
 
 add_subdirectory(./SolarSimulator/3rdParty/glfw)
 add_subdirectory(./SolarSimulator/3rdParty/glew/build/cmake)
+add_subdirectory(./SolarSimulator/3rdParty/JsonParser)
 add_subdirectory(./SolarSimulator/3rdParty/glm)
 add_subdirectory(./SolarSimulator/3rdParty/stb_image)
 add_subdirectory(./SolarSimulator/3rdParty/imgui)
@@ -96,4 +97,4 @@ target_include_directories("${CMAKE_PROJECT_NAME}" PUBLIC "${CMAKE_CURRENT_SOURC
 target_include_directories("${CMAKE_PROJECT_NAME}" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/SolarSimulator/3rdParty/glew/include")
 
 
-target_link_libraries("${CMAKE_PROJECT_NAME}" PRIVATE imgui glfw glew stb_image )
+target_link_libraries("${CMAKE_PROJECT_NAME}" PRIVATE imgui glfw glew stb_image Json)
